@@ -14,6 +14,7 @@ Changelog for 1.3.25
 * Fixed blank screen processing recurring transactiosn in fcgi (Chris T)
 * Removed blank/unused Contact/Employee dropdown on shipping screen (Chris T)
 * Fixed internal server errors retrieving taxes with invalid dates (Chris T)
+* Fixed taxform "default reportable" checkbox not persisted (Chris T, 3581310)
 
 Chris T is Chris Travers
 Kevin B is Kevin Bailey
